<resources>
    <string name="app_name">LoginActivity</string>
    <string name="textview_Logo">famous</string>
    <string name="pageTwo_textview_Logo">Welcome</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="createaccount">Create Account</string>
    <string name="pageTwoDisplay_Name">Your Name:</string>
    <string name="pageTwoemail">Your Email:</string>
    <string name="pageTwoPassword">Password:</string>
    <string name="Logout">Logout</string>
    <string name="listview_tutorial">ListView Tutorial</string>
    <string name="Page3Logo">List View</string>
    <string name="customDataModel_Name">Name</string>
    <string name="customDataModel_hometown">HomeTown</string>
    <string name="toc_id">Toc_id</string>
    <string name="toc_nametree">Toc_nameTree</string>
    <string name="toc_numtree">Toc_numTree</string>
    <string name="page4Logo">Object Content</string>
    <string name="page4_TextView_toc_id">id</string>
    <string name="page4_TextView_toc_numtree">numtree</string>
    <string name="page4_TextView_toc_nametree">nametree</string>
    <string name="page4_TextView_toc_tocnametree">tocnametree</string>
    <string name="page4_TextView_toc_htmlpage">htmlpage</string>
    <string name="page4_TextView_toc_haspdf">haspdf</string>
    <string name="page4_TextView_toc_emailcontent">emailcontent</string>
    <string name="newsList_TextView_Logo">DEMO LIST</string>
    <string name="customNewsList_news_header">News_header</string>
    <string name="custom_newsList_news_date">News_date</string>
    <string name="customNewsList_news_preview">news preview</string>
    <string name="news_list_tutorial">News List Tutorial</string>
    <string name="detailedNewsListAActivity_logo_detail_view">Detail View</string>
    <string name="backButton_detailedNewsView">Back</string>
    <string name="detailed_news_header">Detailed News Header</string>
    <string name="Detailed_news_content">News Content</string>
    <string name="skip_to_listview">Skip to ListView</string>
    <string name="skip_to_newslist">Skip to NewsList</string>
    <string name="Button_delete_list_item">Delete List Item</string>
</resources>
