<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#128C7E"
    android:divider="@drawable/custom_seprator_for_listview">

        <TextView
            android:id="@+id/customListView_textView_Toc_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/toc_id"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/customListView_textView_Toc_nameTree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/toc_nametree"
            android:textColor="#ffffff"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/customListView_textView_Toc_numTree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/toc_numtree"
            android:textColor="#ffffff"
            android:textSize="18sp"/>

</LinearLayout>