<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0080c0"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/pageTwo_displayActivityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0080c0"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        tools:context=".Display2ndPageActivity">

        <TextView
            android:id="@+id/pageTwo_textView_Logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="cursive"
            android:text="@string/pageTwo_textview_Logo"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="72sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pageTwo_textView_Logo"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/pageTwoDisplay_Name"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:id="@+id/pageTwo_TextView_Name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pageTwo_textView_Logo"
            android:layout_toRightOf="@id/pageTwo_TextView_Name"
            android:layout_toEndOf="@id/pageTwo_TextView_Name"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"

            android:text=""
            android:textColor="#ffffff"
            android:id="@+id/pageTwo_TextView_DisplayName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pageTwo_TextView_Name"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/pageTwoemail"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:id="@+id/pageTwo_TextView_Email"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pageTwo_TextView_DisplayName"
            android:layout_toRightOf="@id/pageTwo_TextView_Email"
            android:layout_toEndOf="@id/pageTwo_TextView_Email"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"

            android:text=""
            android:textColor="#ffffff"
            android:id="@+id/pageTwo_TextView_DisplayEmail"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pageTwo_TextView_Email"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/pageTwoPassword"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:id="@+id/pageTwo_TextView_Password"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pageTwo_TextView_DisplayEmail"
            android:layout_toRightOf="@id/pageTwo_TextView_Password"
            android:layout_toEndOf="@id/pageTwo_TextView_Password"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"

            android:text=""
            android:textColor="#ffffff"
            android:id="@+id/pageTwo_TextView_DisplayPassword"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/Button_LogOut"
            android:layout_below="@id/pageTwo_TextView_DisplayPassword"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Logout"
            android:background="#004080"
            android:textSize="18sp"
            android:textColor="#ffffff"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/Button_ListView"
            android:layout_below="@id/Button_LogOut"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listview_tutorial"
            android:background="#004080"
            android:textSize="18sp"
            android:textColor="#ffffff"/>

    </RelativeLayout>
</ScrollView>